# network-qot-predictor

./: .gitignore  README.md  pyproject.toml
docs/: intro.tex
src/: main.py  process_images.py
src/active_learning/: learner.py  metrics.py  selector.py  tester.py
src/anaylsis/: pr.py
src/config/: __init__.py  base.py  data_processing.py  image_processing.py  logger.py  parser.py  toml_format.py
src/config/format/: config_format.py
src/data/: encoder.py
src/data_processing/: data_processing.py
src/forest/: cart.py  forest.py  mode.py
src/image_processing/: __init__.py  config.py  feature_extractor.py
src/learner/: gui.py  learner.py
src/model/: classifier.py
src/models/: classifier.py
src/models/forest/: cart.py  forest.py  util.py
src/models/svm/: svm.py
src/selector/: selector.py
src/svm/: svm.py
src/tree/: cart.py  gini.py  split.py
src/utils/: __init__.py  argparse_logger.py  logger.py
tests/config/: test_base.py  test_parser.py
tests/forest/: test_util.py
tests/tree/: test_gini.py  test_split.py
