[project]
name = "uma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "scikit-learn-stubs>=0.0.3",
    "pandas-stubs>=2.3.3.251201",
]

[tool.basedpyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100 
indent-width = 4
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true
